# astypes

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
astypes/: __init__.py  _ann_to_type.py  _ass.py  _ast.py  _handlers.py  _helpers.py  _resolve_qualname.py  _signature.py  _type.py  _types.py
tests/: test_ann_to_type.py  test_ast.py  test_handlers.py  test_resolve_qualname.py  test_signature.py  test_type.py
