[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "astypes"
authors = [
    {name = "Gram", email = "git@orsinium.dev"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
keywords = [
    "typing",
    "annotations",
    "type annotations",
    "ast",
    "astroid",
]
dependencies = ["astroid", "typeshed_client"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Source = "https://github.com/orsinium-labs/astypes"

[tool.mypy]
files = ["astypes"]
python_version = 3.8
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.pytest.ini_options]
addopts = [
    "--cov=astypes",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=91",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "    pass",
    "except ImportError:",
]

[tool.coverage.run]
branch = true
